--- a/src/main/resources/com/example/crime_management_system_gui/login.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/login.fxml
@@ -1,26 +1,29 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<VBox id="HBoxName" alignment="CENTER" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="20.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Control">
-    <padding>
-        <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
-    </padding>
-    <children>
-        <Label contentDisplay="TOP" text="LOGIN PLEASE" textAlignment="CENTER" textFill="#8c0707">
-            <font>
-                <Font size="24.0" />
-            </font>
-        </Label>
-      <TextField promptText="Name" />
-      <TextField promptText="ID" />
-      <Button mnemonicParsing="false" text="login" />
-      <Button mnemonicParsing="false" text="Forget password?" />
-      <Button mnemonicParsing="false" onAction="#switchToMain" text="Back" />
-    </children>
-</VBox>
+
+<AnchorPane id="login" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="700.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Control">
+   <children>
+      <Button layoutX="72.0" layoutY="341.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0" prefHeight="26.0" prefWidth="206.0" text="Button">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <TextField layoutX="276.0" layoutY="131.0" promptText="User Name" />
+      <TextField layoutX="275.0" layoutY="187.0" promptText="Password" />
+      <Button layoutX="267.0" layoutY="241.0" mnemonicParsing="false" opacity="0.0" prefHeight="26.0" prefWidth="150.0" text="Button">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+      <Button layoutX="444.0" layoutY="341.0" mnemonicParsing="false" opacity="0.0" prefHeight="26.0" prefWidth="233.0" text="Button">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Button>
+   </children>
+</AnchorPane>
