--- a/src/main/resources/com/example/crime_management_system_gui/register.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/register.fxml
@@ -3,11 +3,12 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox id="HBoxName" alignment="CENTER" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="20.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Control">
+<VBox id="HBoxName" alignment="CENTER" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="10.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Control">
     <padding>
         <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
     </padding>
@@ -17,10 +18,12 @@
                 <Font size="24.0" />
             </font>
         </Label>
-        <TextField promptText="Name" />
-        <TextField promptText="ID" />
-        <Button mnemonicParsing="false" text="login" />
-        <Button mnemonicParsing="false" text="Forget password?" />
+      <TextField promptText="First Name" />
+      <TextField promptText="Last Name" />
+      <TextField promptText="Phone" />
+      <TextField promptText="Password" />
+      <RadioButton mnemonicParsing="false" text="Male" />
+      <RadioButton mnemonicParsing="false" text="Female" />
         <Button mnemonicParsing="false" onAction="#switchToMain" text="Back" />
     </children>
 </VBox>
