--- a/src/main/resources/com/example/crime_management_system_gui/register.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/register.fxml
@@ -8,22 +8,23 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox id="HBoxName" alignment="CENTER" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="10.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Control">
+<VBox id="HBoxName" alignment="CENTER" fillWidth="false" maxHeight="-Infinity" maxWidth="-Infinity"
+      minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" spacing="10.0"
+      stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1"
+      fx:controller="com.example.crime_management_system_gui.Control">
     <padding>
-        <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
+        <Insets bottom="50.0" left="50.0" right="50.0" top="50.0"/>
     </padding>
-    <children>
-        <Label contentDisplay="TOP" text="REGISTER PLEASE" textAlignment="CENTER" textFill="#8c0707">
-            <font>
-                <Font size="24.0" />
-            </font>
-        </Label>
-      <TextField promptText="First Name" />
-      <TextField promptText="Last Name" />
-      <TextField promptText="Phone" />
-      <TextField promptText="Password" />
-      <RadioButton mnemonicParsing="false" text="Male" />
-      <RadioButton mnemonicParsing="false" text="Female" />
-        <Button mnemonicParsing="false" onAction="#switchToMain" text="Back" />
-    </children>
+    <Label contentDisplay="TOP" text="REGISTER PLEASE" textAlignment="CENTER" textFill="#8c0707">
+        <font>
+            <Font size="24.0"/>
+        </font>
+    </Label>
+    <TextField promptText="First Name"/>
+    <TextField promptText="Last Name"/>
+    <TextField promptText="Phone"/>
+    <TextField promptText="Password"/>
+    <RadioButton mnemonicParsing="false" text="Male"/>
+    <RadioButton mnemonicParsing="false" text="Female"/>
+    <Button mnemonicParsing="false" onAction="#switchToMain" text="Back"/>
 </VBox>
