--- a/src/main/resources/com/example/crime_management_system_gui/main.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/main.fxml
@@ -5,28 +5,23 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="main" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="400.0" prefWidth="700.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Control">
+<AnchorPane id="main" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="399.0" prefWidth="709.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Control">
     <padding>
-        <Insets bottom="50.0" left="50.0" right="50.0" top="50.0"/>
+        <Insets bottom="50.0" left="50.0" right="50.0" top="50.0" />
     </padding>
-    <Button focusTraversable="false" layoutX="216.0" layoutY="233.0" mnemonicParsing="false" onAction="#switchToLogin"
-            opacity="0.0" prefHeight="26.0" prefWidth="234.0" text="Button">
+    <Button focusTraversable="false" layoutX="297.0" layoutY="341.0" mnemonicParsing="false" onAction="#switchToLogin" opacity="0.0" prefHeight="34.0" prefWidth="126.0" text="Button">
         <cursor>
-          <Cursor fx:constant="HAND"/>
+          <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <Button layoutX="221.0" layoutY="280.0" mnemonicParsing="false" onAction="#switchToRegister" opacity="0.0"
-            prefHeight="26.0" prefWidth="234.0" text="Button">
+    <Button layoutX="30.0" layoutY="341.0" mnemonicParsing="false" onAction="#switchToRegister" opacity="0.0" prefHeight="34.0" prefWidth="135.0" text="Button">
         <cursor>
-          <Cursor fx:constant="HAND"/>
+          <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <Button layoutX="224.0" layoutY="327.0" mnemonicParsing="false" onAction="#switchToReport" opacity="0.0"
-            prefHeight="26.0" prefWidth="225.0" text="Button">
+    <Button layoutX="545.0" layoutY="339.0" mnemonicParsing="false" onAction="#switchToReport" opacity="0.0" prefHeight="33.0" prefWidth="135.0" text="Button">
         <cursor>
-          <Cursor fx:constant="HAND"/>
+          <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
 </AnchorPane>
