--- a/src/main/resources/com/example/crime_management_system_gui/register.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/register.fxml
@@ -1,21 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="register" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Control">
-    <TextField fx:id="usernameField" focusTraversable="false" layoutX="226.0" layoutY="31.0" promptText="User Name" />
-    <TextField fx:id="phoneField" focusTraversable="false" layoutX="226.0" layoutY="167.0" promptText="Phone" />
-    <TextField fx:id="addressField" focusTraversable="false" layoutX="225.0" layoutY="121.0" promptText="Address" />
-    <PasswordField fx:id="passwordField" focusTraversable="false" layoutX="226.0" layoutY="211.0" promptText="Password" />
-    <Button focusTraversable="false" layoutX="252.0" layoutY="328.0" mnemonicParsing="false" onAction="#handleRegister" text="Create account" />
-    <RadioButton fx:id="maleRadio" focusTraversable="false" layoutX="225.0" layoutY="253.0" mnemonicParsing="false" text="Male" />
-    <RadioButton fx:id="femaleRadio" focusTraversable="false" layoutX="300.0" layoutY="253.0" mnemonicParsing="false" text="Female" />
-    <Label fx:id="messageLabel" alignment="CENTER" contentDisplay="CENTER" focusTraversable="false" layoutX="169.0" layoutY="273.0" prefHeight="55.0" prefWidth="262.0" text="Label" />
-   <Button focusTraversable="false" layoutX="279.0" layoutY="360.0" mnemonicParsing="false" onAction="#switchToMain" text="Back" />
-   <TextField fx:id="ssnField" focusTraversable="false" layoutX="226.0" layoutY="77.0" promptText="ssn" />
-</AnchorPane>
+
+<AnchorPane id="register" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="401.0" prefWidth="712.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Control" />
