--- a/src/main/resources/com/example/crime_management_system_gui/style.css
+++ b/src/main/resources/com/example/crime_management_system_gui/style.css
@@ -1,13 +1,34 @@
 #main{
-   -fx-background-image: url("img.png");
+   -fx-background-image: url("photos/login2/2.png");
    -fx-background-repeat: stretch;
    -fx-background-position: center center;
-   -fx-background-size: cover;
+   -fx-background-size: contain;
 }
 
 #login{
-   -fx-background-image: url("img_1.png");
+   -fx-background-image: url("photos/login2/3.png");
    -fx-background-repeat: stretch;
    -fx-background-position: center center;
-   -fx-background-size: cover;
+   -fx-background-size: contain;
+}
+
+#register{
+   -fx-background-image: url("photos/login2/4.png");
+   -fx-background-repeat: stretch;
+   -fx-background-position: center center;
+   -fx-background-size: contain;
+}
+
+#forgetPassword{
+   -fx-background-image: url("photos/login2/5.png");
+   -fx-background-repeat: stretch;
+   -fx-background-position: center center;
+   -fx-background-size: contain;
+}
+
+#report{
+   -fx-background-image: url("photos/login2/6.png");
+   -fx-background-repeat: stretch;
+   -fx-background-position: center center;
+   -fx-background-size: contain;
 }
