--- a/src/main/resources/com/example/crime_management_system_gui/register.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/register.fxml
@@ -1,6 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-
-<AnchorPane id="register" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="401.0" prefWidth="712.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Control" />
+<AnchorPane id="register" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="401.0" prefWidth="712.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Control">
+   <Button layoutX="57.0" layoutY="342.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0" prefHeight="35.0" prefWidth="148.0" text="Button" />
+   <Button layoutX="467.0" layoutY="338.0" mnemonicParsing="false" onAction="#handleRegister" opacity="0.0" prefHeight="44.0" prefWidth="172.0" text="Button" />
+   <TextField fx:id="usernameField" layoutX="273.0" layoutY="79.0" prefHeight="26.0" prefWidth="163.0" promptText="Username" />
+   <TextField fx:id="ssnField" layoutX="274.0" layoutY="122.0" prefHeight="26.0" prefWidth="163.0" promptText="ID" />
+   <TextField fx:id="phoneField" layoutX="273.0" layoutY="187.0" prefHeight="26.0" prefWidth="163.0" promptText="Phone" />
+   <RadioButton fx:id="femaleRadio" layoutX="288.0" layoutY="160.0" mnemonicParsing="false" text="Female" textFill="WHITE" />
+   <RadioButton fx:id="maleRadio" layoutX="398.0" layoutY="160.0" mnemonicParsing="false" text="Male" textFill="WHITE" />
+   <Label fx:id="messageLabel" layoutX="259.0" layoutY="329.0" prefHeight="18.0" prefWidth="190.0" />
+   <PasswordField fx:id="passwordField" layoutX="273.0" layoutY="228.0" prefHeight="26.0" prefWidth="163.0" promptText="Password" />
+   <PasswordField fx:id="passwordCheckerField" layoutX="273.0" layoutY="267.0" prefHeight="26.0" prefWidth="163.0" promptText="Confirm Password" />
+</AnchorPane>
