--- a/src/main/resources/com/example/crime_management_system_gui/login.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/login.fxml
@@ -1,35 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.PasswordField?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.*?>
 <?import javafx.scene.layout.AnchorPane?>
-
-<AnchorPane id="login" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="401.0" prefWidth="712.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Control">
-    <Button layoutX="42.0" layoutY="321.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0" prefHeight="34.0" prefWidth="132.0" text="Button">
+<AnchorPane id="login" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
+            prefHeight="401.0" prefWidth="712.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Control">
+    <Button layoutX="42.0" layoutY="321.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0"
+            prefHeight="34.0" prefWidth="132.0" text="Button">
         <cursor>
-          <Cursor fx:constant="HAND" />
+            <Cursor fx:constant="HAND"/>
         </cursor>
     </Button>
-    <TextField fx:id="usernameField" alignment="CENTER" focusTraversable="false" layoutX="273.0" layoutY="126.0" prefHeight="26.0" prefWidth="162.0" promptText="User Name">
-      <cursor>
-         <Cursor fx:constant="TEXT" />
-      </cursor></TextField>
-    <Button layoutX="285.0" layoutY="244.0" mnemonicParsing="false" onAction="#handleLogin" opacity="0.0" prefHeight="33.0" prefWidth="132.0" text="Button">
+    <TextField fx:id="usernameField" alignment="CENTER" focusTraversable="false" layoutX="273.0" layoutY="126.0"
+               prefHeight="26.0" prefWidth="162.0" promptText="User Name">
         <cursor>
-          <Cursor fx:constant="HAND" />
+            <Cursor fx:constant="TEXT"/>
+        </cursor>
+    </TextField>
+    <Button layoutX="285.0" layoutY="244.0" mnemonicParsing="false" onAction="#handleLogin" opacity="0.0"
+            prefHeight="33.0" prefWidth="132.0" text="Button">
+        <cursor>
+            <Cursor fx:constant="HAND"/>
         </cursor>
     </Button>
-    <Button layoutX="513.0" layoutY="325.0" mnemonicParsing="false" opacity="0.0" prefHeight="34.0" prefWidth="143.0" text="Button">
+    <Button layoutX="513.0" layoutY="325.0" mnemonicParsing="false" opacity="0.0" prefHeight="34.0" prefWidth="143.0"
+            text="Button">
         <cursor>
-          <Cursor fx:constant="HAND" />
+            <Cursor fx:constant="HAND"/>
         </cursor>
     </Button>
-   <Label fx:id="messageLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="254.0" layoutY="312.0" prefHeight="18.0" prefWidth="196.0" />
-   <PasswordField fx:id="passwordField" alignment="CENTER" layoutX="274.0" layoutY="189.0" onAction="#handleLogin" prefHeight="26.0" prefWidth="162.0" promptText="Password">
-      <cursor>
-         <Cursor fx:constant="TEXT" />
-      </cursor></PasswordField>
+    <Label fx:id="messageLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="254.0" layoutY="312.0"
+           prefHeight="18.0" prefWidth="196.0"/>
+    <PasswordField fx:id="passwordField" alignment="CENTER" layoutX="274.0" layoutY="189.0" onAction="#handleLogin"
+                   prefHeight="26.0" prefWidth="162.0" promptText="Password">
+        <cursor>
+            <Cursor fx:constant="TEXT"/>
+        </cursor>
+    </PasswordField>
 </AnchorPane>
