--- a/src/main/resources/com/example/crime_management_system_gui/style.css
+++ b/src/main/resources/com/example/crime_management_system_gui/style.css
@@ -1,34 +1,34 @@
 #main{
    -fx-background-image: url("photos/login2/2.png");
-   -fx-background-repeat: stretch;
+   -fx-background-repeat: no-repeat;
    -fx-background-position: center center;
-   -fx-background-size: contain;
+   -fx-background-size: cover;
 }
 
 #login{
    -fx-background-image: url("photos/login2/3.png");
-   -fx-background-repeat: stretch;
+   -fx-background-repeat: no-repeat;
    -fx-background-position: center center;
-   -fx-background-size: contain;
+   -fx-background-size: cover;
 }
 
 #register{
    -fx-background-image: url("photos/login2/4.png");
-   -fx-background-repeat: stretch;
+   -fx-background-repeat: no-repeat;
    -fx-background-position: center center;
-   -fx-background-size: contain;
+   -fx-background-size: cover;
 }
 
 #forgetPassword{
    -fx-background-image: url("photos/login2/5.png");
-   -fx-background-repeat: stretch;
+   -fx-background-repeat: no-repeat;
    -fx-background-position: center center;
-   -fx-background-size: contain;
+   -fx-background-size: cover;
 }
 
 #report{
    -fx-background-image: url("photos/login2/6.png");
-   -fx-background-repeat: stretch;
+   -fx-background-repeat: no-repeat;
    -fx-background-position: center center;
-   -fx-background-size: contain;
+   -fx-background-size: cover;
 }
