--- a/src/main/resources/com/example/crime_management_system_gui/main.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/main.fxml
@@ -1,31 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.Cursor?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
-<AnchorPane id="main" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-            prefHeight="399.0" prefWidth="709.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1"
-            xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Control">
-    <padding>
-        <Insets bottom="50.0" left="50.0" right="50.0" top="50.0"/>
-    </padding>
-    <Button focusTraversable="false" layoutX="297.0" layoutY="341.0" mnemonicParsing="false" onAction="#switchToLogin"
-            opacity="0.0" prefHeight="34.0" prefWidth="126.0" text="Button">
+
+<AnchorPane id="main" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1420.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Control">
+    <Button focusTraversable="false" layoutX="591.0" layoutY="688.0" mnemonicParsing="false" onAction="#switchToLogin" opacity="0.0" prefHeight="62.0" prefWidth="254.0" text="Button">
         <cursor>
-            <Cursor fx:constant="HAND"/>
+            <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <Button layoutX="30.0" layoutY="341.0" mnemonicParsing="false" onAction="#switchToRegister" opacity="0.0"
-            prefHeight="34.0" prefWidth="135.0" text="Button">
+    <Button layoutX="71.0" layoutY="688.0" mnemonicParsing="false" onAction="#switchToRegister" opacity="0.0" prefHeight="61.0" prefWidth="254.0" text="Button">
         <cursor>
-            <Cursor fx:constant="HAND"/>
+            <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <Button layoutX="545.0" layoutY="339.0" mnemonicParsing="false" onAction="#switchToReport" opacity="0.0"
-            prefHeight="33.0" prefWidth="135.0" text="Button">
+    <Button layoutX="1112.0" layoutY="683.0" mnemonicParsing="false" onAction="#switchToReport" opacity="0.0" prefHeight="62.0" prefWidth="254.0" text="Button">
         <cursor>
-            <Cursor fx:constant="HAND"/>
+            <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
 </AnchorPane>
