--- a/src/main/resources/com/example/crime_management_system_gui/main.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/main.fxml
@@ -4,7 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="main" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="801.0" prefWidth="1451.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.entities.Control">
+<AnchorPane id="main" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1420.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Control">
     <Button focusTraversable="false" layoutX="591.0" layoutY="688.0" mnemonicParsing="false" onAction="#switchToLogin" opacity="0.0" prefHeight="62.0" prefWidth="254.0" text="Button">
         <cursor>
             <Cursor fx:constant="HAND" />
