--- a/src/main/resources/com/example/crime_management_system_gui/report.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/report.fxml
@@ -8,16 +8,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="register" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1420.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Control">
-   <Button layoutX="111.0" layoutY="681.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0" prefHeight="77.0" prefWidth="297.0" text="Button">
+<AnchorPane id="report" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Switching">
+   <Button layoutX="174.0" layoutY="748.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0" prefHeight="94.0" prefWidth="338.0" text="Button">
       <cursor>
          <Cursor fx:constant="HAND" />
       </cursor></Button>
-   <Button layoutX="938.0" layoutY="680.0" mnemonicParsing="false" opacity="0.0" prefHeight="78.0" prefWidth="338.0" text="Button">
+   <Button layoutX="1036.0" layoutY="756.0" mnemonicParsing="false" opacity="0.0" prefHeight="101.0" prefWidth="358.0" text="Button">
       <cursor>
          <Cursor fx:constant="HAND" />
       </cursor></Button>
-   <TextField layoutX="546.0" layoutY="161.0" prefHeight="62.0" prefWidth="329.0" promptText="Name">
+   <TextField layoutX="595.0" layoutY="175.0" prefHeight="62.0" prefWidth="358.0" promptText="Name">
       <font>
          <Font size="18.0" />
       </font>
@@ -25,7 +25,7 @@
          <Cursor fx:constant="TEXT" />
       </cursor>
    </TextField>
-   <TextField layoutX="547.0" layoutY="235.0" prefHeight="62.0" prefWidth="329.0">
+   <TextField layoutX="595.0" layoutY="254.0" prefHeight="62.0" prefWidth="358.0" promptText="Phone">
       <font>
          <Font size="18.0" />
       </font>
@@ -33,7 +33,7 @@
          <Cursor fx:constant="TEXT" />
       </cursor>
    </TextField>
-   <TextField layoutX="548.0" layoutY="387.0" prefHeight="62.0" prefWidth="329.0" promptText="Phone">
+   <TextField layoutX="597.0" layoutY="427.0" prefHeight="62.0" prefWidth="358.0">
       <font>
          <Font size="18.0" />
       </font>
@@ -41,11 +41,11 @@
          <Cursor fx:constant="TEXT" />
       </cursor>
    </TextField>
-   <DatePicker layoutX="548.0" layoutY="310.0" prefHeight="62.0" prefWidth="330.0" promptText="Date of report" showWeekNumbers="true">
+   <DatePicker layoutX="596.0" layoutY="336.0" prefHeight="62.0" prefWidth="358.0" promptText="Date of report" showWeekNumbers="true">
       <cursor>
          <Cursor fx:constant="HAND" />
       </cursor></DatePicker>
-   <TextArea layoutX="298.0" layoutY="459.0" prefHeight="211.0" prefWidth="823.0" promptText="Put your report here, please">
+   <TextArea layoutX="339.0" layoutY="505.0" prefHeight="222.0" prefWidth="908.0" promptText="Put your report here, please">
       <font>
          <Font size="18.0" />
       </font>
