--- a/src/main/resources/com/example/crime_management_system_gui/login.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/login.fxml
@@ -8,13 +8,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="login" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1420.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Control">
-    <Button layoutX="81.0" layoutY="653.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0" prefHeight="62.0" prefWidth="258.0" text="Button">
+<AnchorPane id="login" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.loginController">
+    <Button layoutX="97.0" layoutY="709.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0" prefHeight="62.0" prefWidth="273.0" text="Button">
         <cursor>
             <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <TextField fx:id="usernameField" alignment="CENTER" focusTraversable="false" layoutX="549.0" layoutY="249.0" prefHeight="62.0" prefWidth="322.0" promptText="User Name">
+    <TextField fx:id="usernameField" alignment="CENTER" focusTraversable="false" layoutX="589.0" layoutY="267.0" prefHeight="62.0" prefWidth="322.0" promptText="User Name">
         <cursor>
             <Cursor fx:constant="TEXT" />
         </cursor>
@@ -22,21 +22,21 @@
          <Font size="18.0" />
       </font>
     </TextField>
-    <Button layoutX="567.0" layoutY="494.0" mnemonicParsing="false" onAction="#handleLogin" opacity="0.0" prefHeight="62.0" prefWidth="282.0" text="Button">
+    <Button layoutX="626.0" layoutY="534.0" mnemonicParsing="false" onAction="#handleLogin" opacity="0.0" prefHeight="72.0" prefWidth="296.0" text="Button">
         <cursor>
             <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <Button layoutX="1040.0" layoutY="653.0" mnemonicParsing="false" opacity="0.0" prefHeight="72.0" prefWidth="296.0" text="Button">
+    <Button layoutX="1124.0" layoutY="704.0" mnemonicParsing="false" onAction="#switchToForgetPassword" opacity="0.0" prefHeight="84.0" prefWidth="322.0" text="Button">
         <cursor>
             <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <Label fx:id="messageLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="567.0" layoutY="590.0" prefHeight="62.0" prefWidth="282.0">
+    <Label fx:id="messageLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="609.0" layoutY="673.0" prefHeight="62.0" prefWidth="282.0">
       <font>
          <Font size="18.0" />
       </font></Label>
-    <PasswordField fx:id="passwordField" alignment="CENTER" layoutX="550.0" layoutY="368.0" onAction="#handleLogin" prefHeight="62.0" prefWidth="322.0" promptText="Password">
+    <PasswordField fx:id="passwordField" alignment="CENTER" layoutX="591.0" layoutY="408.0" onAction="#handleLogin" prefHeight="62.0" prefWidth="322.0" promptText="Password">
         <cursor>
             <Cursor fx:constant="TEXT" />
         </cursor>
