--- a/src/main/resources/com/example/crime_management_system_gui/register.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/register.fxml
@@ -6,44 +6,48 @@
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="register" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="800.0" prefWidth="1420.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Control">
-    <Button layoutX="112.0" layoutY="679.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0" prefHeight="74.0" prefWidth="298.0" text="Button">
+<AnchorPane id="register" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Control">
+    <Button layoutX="125.0" layoutY="733.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0" prefHeight="91.0" prefWidth="319.0" text="Button">
       <cursor>
          <Cursor fx:constant="HAND" />
       </cursor></Button>
-    <Button layoutX="935.0" layoutY="676.0" mnemonicParsing="false" onAction="#handleRegister" opacity="0.0" prefHeight="82.0" prefWidth="342.0" text="Button">
+    <Button layoutX="1007.0" layoutY="726.0" mnemonicParsing="false" onAction="#handleRegister" opacity="0.0" prefHeight="102.0" prefWidth="374.0" text="Button">
       <cursor>
          <Cursor fx:constant="HAND" />
       </cursor></Button>
-    <TextField fx:id="usernameField" layoutX="544.0" layoutY="156.0" prefHeight="57.0" prefWidth="326.0" promptText="Username">
+    <TextField fx:id="usernameField" layoutX="564.0" layoutY="170.0" prefHeight="57.0" prefWidth="326.0" promptText="Username">
       <font>
          <Font size="18.0" />
       </font></TextField>
-    <TextField fx:id="ssnField" layoutX="544.0" layoutY="240.0" prefHeight="58.0" prefWidth="326.0" promptText="ID">
+    <TextField fx:id="idField" layoutX="562.0" layoutY="257.0" prefHeight="58.0" prefWidth="326.0" promptText="ID">
       <font>
          <Font size="18.0" />
       </font></TextField>
-    <TextField fx:id="phoneField" layoutX="544.0" layoutY="370.0" prefHeight="58.0" prefWidth="326.0" promptText="Phone">
+    <TextField fx:id="phoneField" layoutX="560.0" layoutY="417.0" prefHeight="58.0" prefWidth="326.0" promptText="Phone">
       <font>
          <Font size="18.0" />
       </font></TextField>
-    <RadioButton fx:id="femaleRadio" graphicTextGap="58.0" layoutX="624.0" layoutY="313.0" mnemonicParsing="false" prefHeight="44.0" prefWidth="96.0" scaleX="2.0" scaleY="2.0" text="Female" textFill="WHITE">
+    <RadioButton fx:id="femaleRadio" graphicTextGap="58.0" layoutX="601.0" layoutY="352.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="79.0" scaleX="2.0" scaleY="2.0" text="Female" textFill="WHITE">
       <cursor>
          <Cursor fx:constant="HAND" />
-      </cursor></RadioButton>
-    <RadioButton fx:id="maleRadio" layoutX="818.0" layoutY="326.0" mnemonicParsing="false" scaleX="2.0" scaleY="2.0" text="Male" textFill="WHITE" />
-    <Label fx:id="messageLabel" alignment="CENTER" layoutX="561.0" layoutY="639.0" prefHeight="74.0" prefWidth="298.0">
+      </cursor>
+      <toggleGroup>
+         <ToggleGroup />
+      </toggleGroup></RadioButton>
+    <RadioButton fx:id="maleRadio" layoutX="813.0" layoutY="360.0" mnemonicParsing="false" scaleX="2.0" scaleY="2.0" text="Male" textFill="WHITE" />
+    <Label fx:id="messageLabel" alignment="CENTER" layoutX="528.0" layoutY="680.0" prefHeight="74.0" prefWidth="358.0">
       <font>
          <Font size="18.0" />
       </font></Label>
-    <PasswordField fx:id="passwordField" layoutX="544.0" layoutY="453.0" prefHeight="58.0" prefWidth="326.0" promptText="Password">
+    <PasswordField fx:id="passwordField" layoutX="560.0" layoutY="499.0" prefHeight="58.0" prefWidth="326.0" promptText="Password">
       <font>
          <Font size="18.0" />
       </font></PasswordField>
-    <PasswordField fx:id="passwordCheckerField" layoutX="544.0" layoutY="528.0" prefHeight="58.0" prefWidth="326.0" promptText="Confirm Password">
+    <PasswordField fx:id="passwordCheckerField" layoutX="559.0" layoutY="582.0" prefHeight="58.0" prefWidth="326.0" promptText="Confirm Password">
       <font>
          <Font size="18.0" />
       </font></PasswordField>
