--- a/src/main/resources/com/example/crime_management_system_gui/style.css
+++ b/src/main/resources/com/example/crime_management_system_gui/style.css
@@ -6,7 +6,7 @@
 }
 
 #login{
-   -fx-background-image: url("photos/login2/3.png");
+   -fx-background-image: url("photos/login2/login.png");
    -fx-background-repeat: no-repeat;
    -fx-background-position: center center;
    -fx-background-size: cover;
