handle login and forget password

--- a/src/main/resources/com/example/crime_management_system_gui/login.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/login.fxml
@@ -14,7 +14,7 @@
             <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <TextField fx:id="usernameField" alignment="CENTER" focusTraversable="false" layoutX="589.0" layoutY="304.0" prefHeight="62.0" prefWidth="322.0" promptText="User Name">
+    <TextField fx:id="username" alignment="CENTER" focusTraversable="false" layoutX="589.0" layoutY="304.0" prefHeight="62.0" prefWidth="322.0" promptText="User Name">
         <cursor>
             <Cursor fx:constant="TEXT" />
         </cursor>
@@ -32,11 +32,11 @@
             <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <Label fx:id="messageLabel" alignment="CENTER" contentDisplay="CENTER" layoutX="609.0" layoutY="673.0" prefHeight="62.0" prefWidth="282.0">
+    <Label fx:id="message" alignment="CENTER" contentDisplay="CENTER" layoutX="609.0" layoutY="673.0" prefHeight="62.0" prefWidth="282.0">
       <font>
          <Font size="18.0" />
       </font></Label>
-    <PasswordField fx:id="passwordField" alignment="CENTER" layoutX="591.0" layoutY="408.0" onAction="#handleLogin" prefHeight="62.0" prefWidth="322.0" promptText="Password">
+    <PasswordField fx:id="password" alignment="CENTER" layoutX="591.0" layoutY="408.0" onAction="#handleLogin" prefHeight="62.0" prefWidth="322.0" promptText="Password">
         <cursor>
             <Cursor fx:constant="TEXT" />
         </cursor>
