--- a/src/main/resources/com/example/crime_management_system_gui/forget_password.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/forget_password.fxml
@@ -8,17 +8,17 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="forgetPassword" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Switching">
+<AnchorPane id="forgetPassword" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.ForgotPasswordController">
     <Button layoutX="120.0" layoutY="718.0" mnemonicParsing="false" onAction="#switchToLogin" opacity="0.0" prefHeight="98.0" prefWidth="350.0" text="Button">
       <cursor>
          <Cursor fx:constant="HAND" />
       </cursor></Button>
-    <Button layoutX="1061.0" layoutY="725.0" mnemonicParsing="false" opacity="0.0" prefHeight="98.0" prefWidth="367.0" text="Button">
+    <Button layoutX="1061.0" layoutY="725.0" mnemonicParsing="false" onAction="#handleResetPassword" opacity="0.0" prefHeight="98.0" prefWidth="367.0" text="Button">
       <cursor>
          <Cursor fx:constant="HAND" />
       </cursor></Button>
-    <Label layoutX="546.0" layoutY="631.0" prefHeight="86.0" prefWidth="446.0" text="Label" />
-    <TextField layoutX="632.0" layoutY="205.0" prefHeight="98.0" prefWidth="367.0" promptText="ID">
+    <Label fx:id="message" layoutX="546.0" layoutY="631.0" prefHeight="86.0" prefWidth="446.0" text="Label" />
+    <TextField fx:id="id" layoutX="632.0" layoutY="205.0" prefHeight="98.0" prefWidth="367.0" promptText="ID">
         <font>
           <Font size="18.0" />
         </font>
@@ -26,7 +26,7 @@
          <Cursor fx:constant="TEXT" />
       </cursor>
     </TextField>
-    <PasswordField layoutX="632.0" layoutY="335.0" prefHeight="98.0" prefWidth="367.0" promptText="New Password">
+    <PasswordField fx:id="newPassword" layoutX="632.0" layoutY="335.0" prefHeight="98.0" prefWidth="367.0" promptText="New Password">
         <font>
           <Font size="18.0" />
         </font>
@@ -34,7 +34,7 @@
          <Cursor fx:constant="TEXT" />
       </cursor>
     </PasswordField>
-    <PasswordField layoutX="633.0" layoutY="464.0" prefHeight="98.0" prefWidth="367.0" promptText="Confirm Password">
+    <PasswordField fx:id="newPasswordConfirm" layoutX="633.0" layoutY="464.0" prefHeight="98.0" prefWidth="367.0" promptText="Confirm Password">
         <font>
           <Font size="18.0" />
         </font>
