--- a/src/main/resources/com/example/crime_management_system_gui/pages/style.css
+++ b/src/main/resources/com/example/crime_management_system_gui/pages/style.css
@@ -1,34 +1,42 @@
 #main{
-   -fx-background-image: url("photos/login2/main.png");
+   -fx-background-image: url("../photos/main.png");
    -fx-background-repeat: no-repeat;
    -fx-background-position: center center;
    -fx-background-size: cover;
 }
 
 #login{
-   -fx-background-image: url("photos/login2/login.png");
+   -fx-background-image: url("../photos/login.png");
    -fx-background-repeat: no-repeat;
    -fx-background-position: center center;
    -fx-background-size: cover;
 }
 
 #register{
-   -fx-background-image: url("photos/login2/4.png");
+   -fx-background-image: url("../photos/register.png");
    -fx-background-repeat: no-repeat;
    -fx-background-position: center center;
    -fx-background-size: cover;
 }
 
 #forgetPassword{
-   -fx-background-image: url("photos/login2/5.png");
+   -fx-background-image: url("../photos/forgetpassword.png");
    -fx-background-repeat: no-repeat;
    -fx-background-position: center center;
    -fx-background-size: cover;
 }
 
 #report{
-   -fx-background-image: url("photos/login2/6.png");
+   -fx-background-image: url("../photos/report.png");
    -fx-background-repeat: no-repeat;
    -fx-background-position: center center;
    -fx-background-size: cover;
+}
+
+#border{
+   -fx-border-radius: 15px;
+   -fx-border-color: green;
+   -fx-border-width: 2px;
+   -fx-background-color: transparent;
+
 }
