--- a/src/main/resources/com/example/crime_management_system_gui/pages/login.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/pages/login.fxml
@@ -14,7 +14,7 @@
             <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <TextField fx:id="username" alignment="CENTER" focusTraversable="false" layoutX="589.0" layoutY="304.0" prefHeight="62.0" prefWidth="322.0" promptText="User Name">
+    <TextField id="border" fx:id="username" alignment="CENTER" focusTraversable="false" layoutX="589.0" layoutY="304.0" prefHeight="62.0" prefWidth="322.0" promptText="User Name" stylesheets="@style.css">
         <cursor>
             <Cursor fx:constant="TEXT" />
         </cursor>
