--- a/src/main/resources/com/example/crime_management_system_gui/police_chief.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/police_chief.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Department">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Departments">
     <TextField fx:id="name" layoutX="381.0" layoutY="296.0" promptText="Name" />
     <TextField fx:id="id" layoutX="381.0" layoutY="254.0" promptText="ID" />
     <DatePicker fx:id="datePicker" layoutX="377.0" layoutY="356.0" promptText="Date of activation" />
