--- a/src/main/resources/com/example/crime_management_system_gui/pages/create_department.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/pages/create_department.fxml
@@ -6,11 +6,11 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Departments">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Departments">
     <TextField fx:id="name" layoutX="381.0" layoutY="296.0" promptText="Name" />
     <TextField fx:id="id" layoutX="381.0" layoutY="254.0" promptText="ID" />
     <DatePicker fx:id="datePicker" layoutX="377.0" layoutY="356.0" promptText="Date of activation" />
     <Label fx:id="message" layoutX="450.0" layoutY="447.0" text="Label" />
-    <Button layoutX="438.0" layoutY="521.0" mnemonicParsing="false" onAction="#createDepartment" text="Button" />
-   <Button layoutX="430.0" layoutY="567.0" mnemonicParsing="false" onAction="#switchToMain" text="Button" />
+    <Button layoutX="438.0" layoutY="521.0" mnemonicParsing="false" onAction="#createDepartment" text="create" />
+   <Button layoutX="430.0" layoutY="567.0" mnemonicParsing="false" onAction="#back" text="back" />
 </AnchorPane>
