--- a/src/main/resources/com/example/crime_management_system_gui/pages/forget_password.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/pages/forget_password.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="forgetPassword" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.ForgotPasswordController">
+<AnchorPane id="forgetPassword" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.ForgotPassword">
     <Button layoutX="120.0" layoutY="718.0" mnemonicParsing="false" onAction="#switchToLogin" opacity="0.0" prefHeight="98.0" prefWidth="350.0" text="Button">
       <cursor>
          <Cursor fx:constant="HAND" />
