--- a/src/main/resources/com/example/crime_management_system_gui/pages/register.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/pages/register.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="register" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.RegisterController">
+<AnchorPane id="register" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Register">
     <Button layoutX="125.0" layoutY="733.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0" prefHeight="91.0" prefWidth="319.0" text="Button">
         <cursor>
             <Cursor fx:constant="HAND" />
@@ -63,4 +63,5 @@
             <Font size="18.0" />
         </font>
     </PasswordField>
+   <TextField fx:id="salary" layoutX="1028.0" layoutY="434.0" promptText="Salary" />
 </AnchorPane>
