--- a/src/main/resources/com/example/crime_management_system_gui/pages/report.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/pages/report.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="report" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.ReportController">
+<AnchorPane id="report" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Report">
     <Button layoutX="174.0" layoutY="748.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0" prefHeight="94.0" prefWidth="338.0" text="Button">
         <cursor>
             <Cursor fx:constant="HAND" />
