--- a/src/main/resources/com/example/crime_management_system_gui/report.fxml
+++ b/src/main/resources/com/example/crime_management_system_gui/report.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane id="report" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/17.0.6" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Report">
+<AnchorPane id="report" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1540.0" stylesheets="@style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.crime_management_system_gui.Report">
     <Button layoutX="174.0" layoutY="748.0" mnemonicParsing="false" onAction="#switchToMain" opacity="0.0" prefHeight="94.0" prefWidth="338.0" text="Button">
         <cursor>
             <Cursor fx:constant="HAND" />
@@ -21,28 +21,28 @@
             <Cursor fx:constant="HAND" />
         </cursor>
     </Button>
-    <TextField fx:id="username" layoutX="595.0" layoutY="175.0" prefHeight="62.0" prefWidth="358.0" promptText="Name">
+    <TextField fx:id="username" focusTraversable="false" layoutX="595.0" layoutY="175.0" prefHeight="62.0" prefWidth="358.0" promptText="Name">
         <font>
-            <Font size="18.0" />
+            <Font size="24.0" />
         </font>
         <cursor>
             <Cursor fx:constant="TEXT" />
         </cursor>
     </TextField>
-    <TextField fx:id="witness" layoutX="595.0" layoutY="254.0" prefHeight="62.0" prefWidth="358.0" promptText="Witness (optional)">
+    <TextField fx:id="witness" focusTraversable="false" layoutX="595.0" layoutY="254.0" prefHeight="62.0" prefWidth="358.0" promptText="Witness (optional)">
         <font>
-            <Font size="18.0" />
+            <Font size="24.0" />
         </font>
         <cursor>
             <Cursor fx:constant="TEXT" />
         </cursor>
     </TextField>
-    <DatePicker fx:id="datePicker" layoutX="596.0" layoutY="336.0" prefHeight="62.0" prefWidth="358.0" promptText="Date of report" showWeekNumbers="true">
+    <DatePicker fx:id="datePicker" focusTraversable="false" layoutX="595.0" layoutY="336.0" prefHeight="62.0" prefWidth="358.0" promptText="Date of report" showWeekNumbers="true">
         <cursor>
             <Cursor fx:constant="HAND" />
         </cursor>
     </DatePicker>
-    <TextArea fx:id="description" layoutX="339.0" layoutY="505.0" prefHeight="222.0" prefWidth="908.0" promptText="Put your report here, please">
+    <TextArea fx:id="description" focusTraversable="false" layoutX="339.0" layoutY="505.0" prefHeight="222.0" prefWidth="908.0" promptText="Put your report here, please">
         <font>
             <Font size="18.0" />
         </font>
@@ -55,5 +55,8 @@
             <Font size="18.0" />
         </font>
     </Label>
-   <ComboBox fx:id="crimeType" layoutX="595.0" layoutY="420.0" prefHeight="62.0" prefWidth="358.0" promptText="None" visibleRowCount="100" />
+   <ComboBox fx:id="crimeType" focusTraversable="false" layoutX="595.0" layoutY="420.0" prefHeight="62.0" prefWidth="358.0" promptText="None" visibleRowCount="100">
+      <cursor>
+         <Cursor fx:constant="HAND" />
+      </cursor></ComboBox>
 </AnchorPane>
